--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
         <findsecbugs.version>1.13.0</findsecbugs.version>
 
         <nvd.api.key>${env.NVD_API_KEY}</nvd.api.key>
+        <!-- SonarCloud configuration: replace placeholders if needed -->
+        <sonar.organization>kevinxschulz-1</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.projectKey>kevinxschulz_lab-dht-bicam-schulz</sonar.projectKey>
     </properties>
 
     <dependencies>
