adding mockito for other tets but getting still errors

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -27,9 +29,7 @@
         <spotbugs.plugin.version>4.8.5.0</spotbugs.plugin.version>
         <findsecbugs.version>1.13.0</findsecbugs.version>
 
-        <nvd.api.key>${env.NVD_API_KEY}</nvd.api.key>
-
-        <!-- SonarCloud configuration -->
+        <!-- SonarCloud -->
         <sonar.organization>kevinxschulz-1</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.projectKey>kevinxschulz_lab-dht-bicam-schulz</sonar.projectKey>
@@ -37,6 +37,7 @@
 
     <dependencies>
 
+        <!-- JUnit 5 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -44,6 +45,23 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Mockito Core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Mockito-JUnit5 Integration -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Excel -->
         <dependency>
             <groupId>net.sourceforge.jexcelapi</groupId>
             <artifactId>jxl</artifactId>
@@ -69,11 +87,10 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
 
-            <!-- JAR with Main-Class -->
+            <!-- JAR Manifest -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -87,7 +104,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Unit Tests -->
+            <!-- Test Runner -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -97,7 +114,7 @@
                 </configuration>
             </plugin>
 
-            <!-- JaCoCo -->
+            <!-- Jacoco -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -124,12 +141,10 @@
                 <artifactId>dependency-check-maven</artifactId>
                 <version>${dependency-check.version}</version>
                 <configuration>
-                    <nvdApiKey>${nvd.api.key}</nvdApiKey>
                     <formats>
                         <format>HTML</format>
                         <format>XML</format>
                     </formats>
-                    <outputDirectory>${project.build.directory}</outputDirectory>
                     <failOnError>false</failOnError>
                 </configuration>
             </plugin>
@@ -140,9 +155,7 @@
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>${pmd.version}</version>
                 <configuration>
-                    <printFailingErrors>true</printFailingErrors>
                     <failOnViolation>false</failOnViolation>
-                    <linkXRef>false</linkXRef>
                 </configuration>
                 <executions>
                     <execution>
@@ -162,13 +175,10 @@
                 <version>${checkstyle.plugin.version}</version>
                 <configuration>
                     <configLocation>google_checks.xml</configLocation>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <consoleOutput>true</consoleOutput>
-                    <failsOnError>false</failsOnError>
+                    <failOnError>false</failOnError>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>checkstyle</id>
                         <phase>verify</phase>
                         <goals>
                             <goal>check</goal>
@@ -177,7 +187,7 @@
                 </executions>
             </plugin>
 
-            <!-- SpotBugs -->
+            <!-- SpotBugs + FindSecBugs -->
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
@@ -190,61 +200,13 @@
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <effort>max</effort>
+                    <effort>Max</effort>
                     <threshold>Low</threshold>
                     <failOnError>false</failOnError>
-                    <xmlOutput>true</xmlOutput>
-                    <htmlOutput>true</htmlOutput>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>spotbugs</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>spotbugs</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
         </plugins>
     </build>
-
-    <reporting>
-        <plugins>
-
-            <plugin>
-                <groupId>com.github.spotbugs</groupId>
-                <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>${spotbugs.plugin.version}</version>
-                <configuration>
-                    <effort>Max</effort>
-                    <threshold>Low</threshold>
-                    <xmlOutput>false</xmlOutput>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>${pmd.version}</version>
-                <configuration>
-                    <linkXRef>false</linkXRef>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${checkstyle.plugin.version}</version>
-                <configuration>
-                    <configLocation>google_checks.xml</configLocation>
-                    <encoding>${project.reporting.outputEncoding}</encoding>
-                    <linkXRef>false</linkXRef>
-                </configuration>
-            </plugin>
-
-        </plugins>
-    </reporting>
 
 </project>
